# pyrmachines

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt  test_RandomMachinesClassifier.py  test_RandomMachinesRegression.py  teste.py
data/: cars.csv
docs/: RandomMachinesClassifier.md  index.md  rmachines.md
pyrmachines/: RandomMachinesClassifier.py  RandomMachinesRegression.py  __init__.py  rmachines.py
